@@ -1,5 +1,12 @@
 2007-03-08  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Signal.cs : guard against NULL gchandles.
+	* gdk/Input.custom : add try/catch blocks to native callbacks.
+	* gtk/*.custom : ditto
+	* gtk/NodeStore.cs : ditto
+
+2007-03-08  Mike Kestner  <mkestner@novell.com>
+
 	* glib/*.cs : add try/catch blocks to native callback
 	methods for DestroyNotify, Copy/Free, and ToggleNotify handlers.  
 	Raise UnhandledException events on catches.  
